2012-07-20  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v2.2.0

	!! Renamed tx_solr_FacetRenderer::getFacet() to getFacetProperties()

	! Added method getFacetInternalType() in interface tx_solr_FacetRenderer
	! Renamed tx_solr_facet_Facet::getOptions() to getOptionsRaw()
	! Renamed tx_solr_Search::getFacetRangeOptions() to getFacetRangeOptions()
	! API cleanup
		* Changed tx_solr_pluginbase_PluginBase::performAction() to be abstract
		* Added missing abstract tx_solr_pluginbase_PluginBase::render()
	! Removed the default language filter 
		* It is advised to have a separate core/index for each language due to different stemming per language
		* Fixes the issue that records indexed for all languages (-1) could not be found

	* Updated SolrPhpClient to r65
	* Updated jQuery to 1.7.2
	* Updated jQuery UI to 1.8.21

	* Fixed bug #35679:Index queue broken by new indexing priority feature, credits Michiel Roos
	* Changed tx_solr_pluginbase_PluginBase to execute postRender() also after renderError()
	* Added feature #35544: Configurable query parameter
	* Fixed bug #35665: An empty search disables the rendering of any plugin output, credits Stefan Sprenger
	* Added tx_solr_facet_FacetOption::isSelectedInFacet()
	* Fixed an issue with the selected state of facet options introduced with #35588, credits Stefan Galinksi
	* Added the tagetPage ID property to the TypoScript constants
	* Added the query GET parameter to constants
	* Added feature #36202: Add option to set domains to be searched, credits Stefan Sprenger
	* Removed title field from result highlighting fields
	* Added OpenSearch support
	* Fixed broken show results of empty query, credits Stefan Galinski
	* Fixed bug #35996: Page Indexer always stores absolute url
	* Fixed bug #35727: Configurable query parameter feature causes bug with the suggestion link
	* Added feature #34652: Add option search.faceting.keepAllFacetsOnSelection, credits Cornel Boppart